--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "axios": "^0.21.4",
     "bootstrap": "^5.1.1",
     "react": "^17.0.2",
+    "react-data-table-component": "^7.2.0",
     "react-datepicker": "^4.2.1",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "styled-components": "^5.3.1",
     "timeago.js": "^4.0.2",
     "web-vitals": "^1.1.2"
   },
